# diff-sync

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  known_hosts.rs  lib.rs  main.rs  sftp_cmd.rs  ssh_session.rs
src/components/: BackupsView.tsx  ContextMenu.tsx  ContextPanel.tsx  EditorInfoBar.tsx  EnvironmentModal.tsx  ErrorBoundary.tsx  IconSidebar.tsx  ProjectList.tsx  ProjectModal.tsx  ProjectTree.tsx  ProjectsView.tsx  SettingsModal.tsx  SettingsView.tsx  StatusBar.tsx  Toast.tsx
src/hooks/: useAppData.ts  useBackupOperations.ts  useEditorSession.ts  useProductionLock.ts
src/services/: tauriDialog.ts  tauriFs.ts
src/types/: index.ts
src/utils/: formatHelper.ts
